<resources>
    <string name="app_name">Güvenli Pati</string>

    <string name="title_onboarding_1">Evde Evcil Hayvan Bakımı</string>
    <string name="description_onboarding_1">Evcil hayvan sahipleri, evcil hayvanlarının genel sağlığı ve refahı için düzenli veteriner kontrollerini sağlamalıdır. Beslenme ihtiyaçlarına dikkat edilmeli ve kaliteli ve besleyici bir diyet sağlanmalıdır. Eğitim ve sosyalizasyon, evcil hayvanların davranışlarını şekillendirir ve onların mutluluğunu artırır. Evcil hayvanlar için güvenli ve konforlu bir yaşam alanı sağlanmalı ve düzenli egzersiz ve aktivite zamanları ayarlanmalıdır. Hijyen, evcil hayvanların sağlığı için hayati önem taşır, bu yüzden düzenli temizlik ve bakım rutinleri uygulanmalıdır.</string>

    <string name="title_onboarding_2">Köpek Bakımı</string>
    <string name="description_onboarding_2">Köpeklerin sağlığı ve refahı için düzenli egzersiz ve yürüyüşler sağlanmalıdır. Kaliteli köpek maması ve taze su temini sağlanmalıdır. Köpeğinizin eğitimi ve sosyalleşmesi için zaman ayırın ve temel komutları öğretin. Köpeğinizin tüy bakımını düzenli olarak yapın ve sağlık kontrolünü ihmal etmeyin. Köpeğiniz için uygun bir barınma alanı sağlayın ve onun için güvenli ve uygun oyuncaklar temin edin.</string>

    <string name="title_onboarding_3">Kedi Bakımı</string>
    <string name="description_onboarding_3">Kediler, düzenli veteriner kontrolleri ile sağlıklarını korumak için yılda en az bir kez veteriner ziyareti yapmalıdır. Beslenme ihtiyaçlarına uygun kaliteli kedi maması sağlanmalı ve taze su her zaman erişilebilir olmalıdır. Tuvalet ihtiyaçlarını karşılayabileceği temiz bir kum kabı sağlanmalı ve düzenli olarak temizlenmelidir. Kediniz için güvenli ve uyarıcı bir iç mekan oluşturun ve onun için zaman ayırarak oyunlar oynayın ve sevgi gösterin. Kedinizin tüylerini düzenli olarak fırçalayarak tüy dökümünü azaltın ve cilt sağlığını koruyun.</string>

    <string name="title_onboarding_4">Kuş Bakımı</string>
    <string name="description_onboarding_4">Kuşlar için uygun bir kafes veya barınak sağlayın ve kafesin hijyenini düzenli olarak koruyun. Beslenme ihtiyaçlarını karşılamak için taze meyve, sebze ve uygun tohum karışımları sağlayın. Kuşlar için sosyal etkileşim önemlidir, bu yüzden onlarla düzenli olarak konuşun, oyunlar oynayın ve zaman geçirin. Tüy bakımını düzenli olarak yapın ve güvenliği için kafeste zararlı nesnelerden uzak tutun.</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="back_button">Back</string>
    <string name="sweet_pet">Sweet Pet</string>
    <string name="advertisement_first_signup">Evcil Dostunun en iyi yardımcısı \n Güvenli Patiye Hoş geldin…</string>
    <string name="email_hint">Email giriniz…</string>
    <string name="password_hint">Şifre giriniz…</string>
    <string name="confirm_password_hint">Tekrar şifre giriniz…</string>
    <string name="sign_up_text">Kayıt Ol</string>
    <string name="advertisement_login">Evcil Dostunun en iyi yardımcısı \nGüvenli Pati\'ye tekrar \nHoş geldin…</string>
    <string name="password_visibility">Password Visibility</string>
    <string name="password_forgot">Şifrenizi mi Unuttunuz?</string>
    <string name="login">Giriş Yap</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="user_name_hint">Adınızı giriniz…</string>
    <string name="user_surname_hint">Soyadınızı giriniz…</string>
    <string name="women">Kadın</string>
    <string name="Men">Erkek</string>
    <string name="save_profile_text">Profili Kaydet</string>
    <string name="love">love</string>
    <string name="paw">paw</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="age">Yaşı…</string>
    <string name="weight">Ağırlığı…</string>
    <string name="type">Türü…</string>

    <string name="advertisement_splash">Evcil dostlarınız için en iyi bakıcıları bulmanın\nkolay ve keyifli yolu: Güvenli Pati</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="petGender">Dişi</string>
    <string name="vaccinate">Yapılıyor</string>
    <string name="unVaccinate">Aşısız</string>
    <string name="gender2">Cinsiyet:</string>
    <string name="petName">Adı…</string>
    <string name="vaccinateState">Aşı Durumu:</string>
    <string name="petRegisterButton">Dostunu Kaydet</string>
    <string name="about">About</string>
    <string name="friendsInfo">Dostun hakkında bilgiler…</string>
    <string name="kg">KG.</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="logo">LOGO</string>
    <string name="menu_click">menu_click</string>
    <string name="pink_paw">pink paw</string>
    <string name="blue_paw">blue paw</string>
    <string name="add_pet_string">Eklemek istediğin türü seç :</string>
    <string name="dog">Köpek :</string>
    <string name="cat">Kedi :</string>
    <string name="bird">Kuş :</string>
    <string name="bird_image">bird image</string>
    <string name="cat_image">cat image</string>
    <string name="dog_image">dog image</string>
    <string name="advertisement">advertisement</string>
    <string name="ana_sayfa">ANA SAYFA</string>
    <string name="name">Ad :</string>
    <string name="weight2">Kilo :</string>
    <string name="age2">Yaş :</string>
    <string name="type2">Tür :</string>
    <string name="province">İl</string>
    <string name="town">İlçe</string>
    <string name="saveInfo">Bilgilerimi Kaydet</string>
    <string name="tl">TL/…</string>
    <string name="tl_hour">TL/Saat</string>
    <string name="todo">TODO</string>
    <string name="zero">0</string>
    <string name="walking">Gezdirme</string>
    <string name="tl_day">TL/Gün</string>
    <string name="feed">Besleme</string>
    <string name="sitting">Evde Bakma</string>
    <string name="jobs">İş Tipi :</string>
    <string name="alldays">Tüm Günler</string>
    <string name="weekend">Hafta Sonu</string>
    <string name="midweek">Hafta İçi</string>
    <string name="availability">Müsaitlik Durumu :</string>
    <string name="birds">Kuşlar</string>
    <string name="cats">Kediler</string>
    <string name="dogs">Köpekler</string>
    <string name="friendsToCare">İlgilenilecek Dostlar :</string>
    <string name="next">Devam Et</string>
    <string name="info">Güvenli pati,\nevcil dostlara sevgi ve özen gösteren\ntutkulu insanları bir araya getiren bir platformdur.\nSiz de bu harika topluluğa katılarak,\nevcil hayvanlar için güvenilir bir bakıcı olabilirsiniz!</string>
    <string name="loading">Yükleniyor…</string>
    <string name="edit">D Ü Z E N L E</string>
    <string name="name2">Ad :</string>
    <string name="surname">Soyad :</string>
    <string name="friends">D O S T L A R</string>
    <string name="save">K A Y D E T</string>
    <string name="backerQuestion">Evcil Hayvan Bakıcısı Olmak İster Misin?</string>
    <string name="congr">🎊Aramıza Hoşgeldiniz🎊</string>
    <string name="advice">ⓘ Profilini daha güvenilir şekilde düzenlemeyi unutma!</string>
    <string name="mainPage">Anasayfa</string>
    <string name="info2">🎊Yeni Dostunuz Eklendi🎊</string>
    <string name="info10">🎊Ödeme Başarıyla Gerçekleşti🎊</string>
    <string name="info11">🎊Değerlendirmeniz İçin Teşekkürler🎊</string>
    <string name="backToMain">Anasayfaya Dön</string>
    <string name="settings">Ayarlar</string>
    <string name="logout">Çıkış Yap</string>
    <string name="job">İşler</string>
    <string name="addFriends">Dost Ekle</string>
    <string name="chat">Sohbetler</string>
    <string name="profile">Profil</string>
    <string name="realname">Yasal Ad</string>
    <string name="realSurname">Yasal Soyad</string>
    <string name="tcId">T.C Kimlik No</string>
    <string name="adress">Adres Bilgisi</string>
    <string name="experience">Deneyim Süresi</string>
    <string name="friendsCount">Dost sayınız</string>
    <string name="birthdate">Doğum Yılı</string>
    <string name="skills">İlgi ve Yetenekler</string>
    <string name="deal">Kullanıcı Sözleşmesini Kabul Ediyorum.</string>
    <string name="deal2">Hizmet Şartlarını Kabul Ediyorum.</string>
    <string name="deal3">Güvenlik Politikasını Kabul Ediyorum.</string>
    <string name="confirm">Onayla</string>
    <string name="find">Evcil dostlarınız için güvenilir bir bakıcı mı arıyorsunuz?\nTatildeyken, işteyken veya günlük yaşamınızda, evcil dostlarınıza bakıcı bulmak artık çok daha kolay!</string>
    <string name="user_name">User Name</string>
    <string name="email_giriniz">Email Giriniz...</string>
    <string name="l_tfen_sisteme_kay_tl_mail_adresinizi_giriniz_nard_ndan_mail_kutunuzdaki_linkten_ifrenizi_yenileyebilirsiniz">Lütfen sisteme kayıtlı mail adresinizi giriniz...\nArdından mail kutunuzdaki linkten şifrenizi yenileyebilirsiniz....</string>
    <string name="ifremi_unuttum">Şifremi Unuttum...</string>
    <string name="g_nder">Gönder</string>
    <string name="pofuduk">Pofuduk - Gezdirme</string>


    <string name="welcome_title">Güvenli Pati\'ye Hoş Geldiniz!</string>
    <string name="app_description">Güvenli Pati, sevimli dostlarınız için ihtiyacınız olan her şeyi tek bir platformda toplayan bir evcil hayvan bakım uygulamasıdır. Burada, evcil hayvan besleme, gezdirme ve bakım gibi çeşitli hizmetlere kolayca erişebilirsiniz. Güvenli Pati, sevimli dostunuzun bakımını en iyi şekilde yapmanız için güvenilir hizmet sağlayıcıları bir araya getirir.</string>
    <string name="how_it_works">Nasıl Çalışır?</string>
    <string name="how_to_use_app">Güvenli Pati\'yi kullanmak çok kolay! Yapmanız gereken tek şey uygulamayı açmak ve ihtiyacınız olan hizmeti seçmek. İster günübirlik bir evcil hayvan hizmeti arayın, ister dostunuz için düzenli yürüyüşler düzenleyin, Güvenli Pati size ve petinize uygun çözümler sunar. Tüm hizmet sağlayıcılarımız özenle seçilmiş ve denetlenmiştir, böylece dostunuzu güvenle emanet edebilirsiniz.</string>
    <string name="our_team">Ekibimiz - BEGTECH</string>
    <string name="team_description">Güvenli Pati, Batın, Yunus ve Burak’tan oluşan genç ve dinamik bir ekip tarafından geliştirilmiştir. Her biri kendi alanında uzman olan bu üç arkadaş, evcil hayvan sahiplerinin hayatını kolaylaştırmak için bu platformu tasarladı. İster teknik destek, ister kullanıcı deneyimi olsun, ekibimiz her zaman yardımcı olmaya hazır.</string>
    <string name="contact_us">Bizimle İletişime Geçin</string>
    <string name="contact_email_batin">Batın için: batinsavran00@gmail.com</string>
    <string name="contact_email_yunus">Yunus Emre için: yunusemre-kurt@outlook.com</string>
    <string name="contact_email_burak">Burak için: eskisemercib27@gmail.com</string>
    <string name="commitment">Güvenli Pati, evcil hayvanınız için en iyi hizmeti sunmayı taahhüt eder. Bizimle bu yolculuğa çıkmaya hazır mısınız? Şimdi uygulamayı indirin ve hizmetlerimizi keşfedin!</string>
    <string name="do_um_y_l">Doğum Yılı...</string>
    <string name="_1_ya">1 Yaş</string>


</resources>

