<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondSignUpFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backToSplash"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back_button"
            android:elevation="3dp"
            android:src="@drawable/back_ico" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:paddingEnd="60dp"
            android:paddingStart="0dp"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageProfilePhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:elevation="3dp"
            android:src="@drawable/men_image"
            app:civ_border_color="#2B2D30"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/add_image_bg"
            android:layout_marginTop="-30dp"
            android:contentDescription="@string/add_profile_image"
            android:elevation="3dp"
            android:src="@drawable/add_profile_ico"
            android:scaleType="fitCenter"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="6dp"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editTextUserSurname"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="6dp"
            android:inputType="text"
            android:hint="@string/user_surname_hint"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFemale"
        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/women_ico"
            android:background="@drawable/sign2_edittext_bg"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/women"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/boy_ico"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/Men"
            android:textSize="12sp"
            android:background="@drawable/sign2_edittext_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_background"
            />

        <Spinner
            android:id="@+id/spinnerTown"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveProfileButton"
            style="@android:style/Widget.Button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:drawableEnd="@drawable/green_paw_ico"
            android:paddingEnd="13dp"
            android:paddingStart="0dp"
            android:text="@string/save_profile_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"/>

    </LinearLayout>
</LinearLayout>
